<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/buttonRegister2"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button_style"
        android:shadowColor="#00FFFFFF"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRegister3"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button_style"
        android:shadowColor="#00FFFFFF"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister2" />

    <Button
        android:id="@+id/buttonRegister4"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button_style"
        android:shadowColor="#00FFFFFF"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister3"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister3" />

    <Button
        android:id="@+id/buttonRegister5"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@drawable/round_button_style"
        android:shadowColor="#00FFFFFF"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister4"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister4" />

    <TextView
        android:id="@+id/textViewDailyCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="2000 kcal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="260dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:progress="80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDailyCalories" />

    <TextView
        android:id="@+id/textViewConsumedCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1800 kcal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daily Calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Breakfast"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Lunch"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Dinner"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Snacks"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <TextView
        android:id="@+id/txtBreakfastCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="300 kcal"
        android:textColor="@color/crimson"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <TextView
        android:id="@+id/txtLunchCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="600 kcal"
        android:textColor="@color/crimson"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="@+id/txtBreakfastCalories"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <TextView
        android:id="@+id/txtLunchCalories2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="400 kcal"
        android:textColor="@color/crimson"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/txtLunchCalories"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/txtLunchCalories3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="500 kcal"
        android:textColor="@color/crimson"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/txtLunchCalories2"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

</androidx.constraintlayout.widget.ConstraintLayout>